# aml-sar-drafting-agent-suite

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: baselines.json  check_kiting_example.json  elder_fraud_example.json  example_input.json  layering_example.json  trade_based_laundering_example.json  trigger_payload_example.json
docs/: API.md  ENV_SETUP.md  EXAMPLES.md  MARKETPLACE_TODO.md  README.md  TOOLS_AND_CONFIGURATION.md  TRIGGERS_USAGE.md
output/: 321-654-9870_regulations.md  321-654-9870_sar_narrative.md  321-654-9870_sar_quality_review.md  321-654-9870_transaction_analysis.md  456-789-0123_regulations.md  456-789-0123_sar_narrative.md  456-789-0123_sar_quality_review.md  456-789-0123_transaction_analysis.md  654-321-0987_regulations.md  654-321-0987_sar_narrative.md  654-321-0987_sar_quality_review.md  654-321-0987_transaction_analysis.md  987-123-4567_regulations.md  987-123-4567_sar_narrative.md  987-123-4567_sar_quality_review.md  987-123-4567_transaction_analysis.md
src/aml_sar_drafting_agent_suite/: crew.py  main.py
src/aml_sar_drafting_agent_suite/config/: agents.yaml  tasks.yaml
src/aml_sar_drafting_agent_suite/tools/: baseline_comparator.py
tests/: conftest.py  test_baseline_comparator.py  test_crew.py  test_main.py
